include/turbo/turbo.h

/* ---- Handles ----------------------------------------------------------- */

typedef struct turbo_runtime   turbo_runtime;   /* the library, its devices */
#define TURBO_ERROR_MESSAGE_LEN 496
/* ---- Small types ------------------------------------------------------- */

/* UTF-8 view. ptr may be NULL only when len is 0. Not NUL-terminated. */
typedef struct turbo_text {
    const char *ptr;
    uint64_t    len;
} turbo_text;
/* Caller-owned. On success code is 0 and message[0] is 0. */
typedef struct turbo_error {
    uint32_t struct_size;
    int32_t  code;
    uint32_t field;     /* 1-based field index for the two errors that name one, else 0 */
    char     message[TURBO_ERROR_MESSAGE_LEN];   /* NUL-terminated UTF-8 */
} turbo_error;
/* level: 0 error, 1 warning, 2 info, 3 debug. message is valid for the call. */
typedef void (*turbo_log_fn)(void *user_data, uint32_t level, turbo_text message);
/* ---- Runtime and devices ----------------------------------------------- */

typedef struct turbo_runtime_desc {
    uint32_t     struct_size;
    uint32_t     reserved;
    turbo_log_fn log;             /* may be NULL */
    void        *log_user_data;
} turbo_runtime_desc;
int32_t turbo_runtime_create(const turbo_runtime_desc *desc, turbo_runtime **out, turbo_error *err);
void    turbo_runtime_release(turbo_runtime *rt);
/* The library version and the backends compiled into this build, as a
 * static string: "0.1.0 cuda openvino". */
const char *turbo_version(void);
const char *turbo_status_name(int32_t code);