bindings/java/src/main/java/ai/pipestream/turbo/ffi/TurboNative.java

    /**
     * {@snippet lang=c :
     * #define TURBO_CAP_OPT_POOLING_OVERRIDE 1048576
     * }
     */
    public static int TURBO_CAP_OPT_POOLING_OVERRIDE() {
        return TURBO_CAP_OPT_POOLING_OVERRIDE;
    }
    private static final int TURBO_CAP_OPT_OUTPUT_DIM = (int)2097152L;
    /**
     * {@snippet lang=c :
     * #define TURBO_CAP_OPT_OUTPUT_DIM 2097152
     * }
     */
    public static int TURBO_CAP_OPT_OUTPUT_DIM() {
        return TURBO_CAP_OPT_OUTPUT_DIM;
    }
    private static final int TURBO_CAP_OPT_OUTPUT_DTYPE = (int)4194304L;
    /**
     * {@snippet lang=c :
     * #define TURBO_CAP_OPT_OUTPUT_DTYPE 4194304
     * }
     */
    public static int TURBO_CAP_OPT_OUTPUT_DTYPE() {
        return TURBO_CAP_OPT_OUTPUT_DTYPE;
    }
    private static final int TURBO_CAP_OPT_TOP_N = (int)8388608L;
    /**
     * {@snippet lang=c :
     * #define TURBO_CAP_OPT_TOP_N 8388608
     * }
     */
    public static int TURBO_CAP_OPT_TOP_N() {
        return TURBO_CAP_OPT_TOP_N;
    }
    private static final int TURBO_CAP_OPT_AGGREGATION = (int)16777216L;
    /**
     * {@snippet lang=c :
     * #define TURBO_CAP_OPT_AGGREGATION 16777216
     * }
     */
    public static int TURBO_CAP_OPT_AGGREGATION() {
        return TURBO_CAP_OPT_AGGREGATION;
    }
    private static final int TURBO_CAP_OPT_RAW_SCORES = (int)33554432L;
    /**
     * {@snippet lang=c :
     * #define TURBO_CAP_OPT_RAW_SCORES 33554432
     * }
     */
    public static int TURBO_CAP_OPT_RAW_SCORES() {
        return TURBO_CAP_OPT_RAW_SCORES;
    }
    private static final int TURBO_ERROR_MESSAGE_LEN = (int)496L;
    /**
     * {@snippet lang=c :
     * #define TURBO_ERROR_MESSAGE_LEN 496
     * }
     */
    public static int TURBO_ERROR_MESSAGE_LEN() {
        return TURBO_ERROR_MESSAGE_LEN;
    }
    private static final int TURBO_MAX_RANK = (int)8L;
    /**
     * {@snippet lang=c :
     * #define TURBO_MAX_RANK 8
     * }
     */
    public static int TURBO_MAX_RANK() {
        return TURBO_MAX_RANK;
    }

    private static class turbo_abi_version {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            TurboNative.C_INT    );

        public static final MemorySegment ADDR = TurboNative.findOrThrow("turbo_abi_version");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * uint32_t turbo_abi_version()
     * }
     */
    public static FunctionDescriptor turbo_abi_version$descriptor() {
        return turbo_abi_version.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * uint32_t turbo_abi_version()
     * }
     */
    public static MethodHandle turbo_abi_version$handle() {
        return turbo_abi_version.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * uint32_t turbo_abi_version()
     * }
     */
    public static MemorySegment turbo_abi_version$address() {
        return turbo_abi_version.ADDR;
    }

    /**
     * {@snippet lang=c :
     * uint32_t turbo_abi_version()
     * }
     */
    public static int turbo_abi_version() {
        var mh$ = turbo_abi_version.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("turbo_abi_version");
            }
            return (int)mh$.invokeExact();
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class turbo_version {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            TurboNative.C_POINTER    );

        public static final MemorySegment ADDR = TurboNative.findOrThrow("turbo_version");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * const char *turbo_version()
     * }
     */
    public static FunctionDescriptor turbo_version$descriptor() {
        return turbo_version.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * const char *turbo_version()
     * }
     */
    public static MethodHandle turbo_version$handle() {
        return turbo_version.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * const char *turbo_version()
     * }
     */
    public static MemorySegment turbo_version$address() {
        return turbo_version.ADDR;
    }

    /**
     * {@snippet lang=c :
     * const char *turbo_version()
     * }
     */
    public static MemorySegment turbo_version() {
        var mh$ = turbo_version.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("turbo_version");
            }
            return (MemorySegment)mh$.invokeExact();
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class turbo_status_name {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            TurboNative.C_POINTER,
            TurboNative.C_INT
        );

        public static final MemorySegment ADDR = TurboNative.findOrThrow("turbo_status_name");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * const char *turbo_status_name(int32_t code)
     * }
     */
    public static FunctionDescriptor turbo_status_name$descriptor() {
        return turbo_status_name.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * const char *turbo_status_name(int32_t code)
     * }
     */
    public static MethodHandle turbo_status_name$handle() {
        return turbo_status_name.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * const char *turbo_status_name(int32_t code)
     * }
     */
    public static MemorySegment turbo_status_name$address() {
        return turbo_status_name.ADDR;
    }

    /**
     * {@snippet lang=c :
     * const char *turbo_status_name(int32_t code)
     * }
     */
    public static MemorySegment turbo_status_name(int code) {
        var mh$ = turbo_status_name.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("turbo_status_name", code);
            }
            return (MemorySegment)mh$.invokeExact(code);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class turbo_runtime_create {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            TurboNative.C_INT,
            TurboNative.C_POINTER,
            TurboNative.C_POINTER,
            TurboNative.C_POINTER
        );

        public static final MemorySegment ADDR = TurboNative.findOrThrow("turbo_runtime_create");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t turbo_runtime_create(const turbo_runtime_desc *desc, turbo_runtime **out, turbo_error *err)
     * }
     */
    public static FunctionDescriptor turbo_runtime_create$descriptor() {
        return turbo_runtime_create.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t turbo_runtime_create(const turbo_runtime_desc *desc, turbo_runtime **out, turbo_error *err)
     * }
     */
    public static MethodHandle turbo_runtime_create$handle() {
        return turbo_runtime_create.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t turbo_runtime_create(const turbo_runtime_desc *desc, turbo_runtime **out, turbo_error *err)
     * }
     */
    public static MemorySegment turbo_runtime_create$address() {
        return turbo_runtime_create.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t turbo_runtime_create(const turbo_runtime_desc *desc, turbo_runtime **out, turbo_error *err)
     * }
     */
    public static int turbo_runtime_create(MemorySegment desc, MemorySegment out, MemorySegment err) {
        var mh$ = turbo_runtime_create.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("turbo_runtime_create", desc, out, err);
            }
            return (int)mh$.invokeExact(desc, out, err);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class turbo_runtime_release {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            TurboNative.C_POINTER
        );

        public static final MemorySegment ADDR = TurboNative.findOrThrow("turbo_runtime_release");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void turbo_runtime_release(turbo_runtime *rt)
     * }
     */
    public static FunctionDescriptor turbo_runtime_release$descriptor() {
        return turbo_runtime_release.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void turbo_runtime_release(turbo_runtime *rt)
     * }
     */
    public static MethodHandle turbo_runtime_release$handle() {
        return turbo_runtime_release.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void turbo_runtime_release(turbo_runtime *rt)
     * }
     */
    public static MemorySegment turbo_runtime_release$address() {
        return turbo_runtime_release.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void turbo_runtime_release(turbo_runtime *rt)
     * }
     */
    public static void turbo_runtime_release(MemorySegment rt) {
        var mh$ = turbo_runtime_release.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("turbo_runtime_release", rt);
            }
            mh$.invokeExact(rt);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class turbo_runtime_load_provider {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            TurboNative.C_INT,
            TurboNative.C_POINTER,
            turbo_text.layout(),
            TurboNative.C_POINTER
        );

        public static final MemorySegment ADDR = TurboNative.findOrThrow("turbo_runtime_load_provider");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t turbo_runtime_load_provider(turbo_runtime *rt, turbo_text path, turbo_error *err)
     * }
     */
    public static FunctionDescriptor turbo_runtime_load_provider$descriptor() {
        return turbo_runtime_load_provider.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t turbo_runtime_load_provider(turbo_runtime *rt, turbo_text path, turbo_error *err)
     * }
     */
    public static MethodHandle turbo_runtime_load_provider$handle() {
        return turbo_runtime_load_provider.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t turbo_runtime_load_provider(turbo_runtime *rt, turbo_text path, turbo_error *err)
     * }
     */
    public static MemorySegment turbo_runtime_load_provider$address() {
        return turbo_runtime_load_provider.ADDR;
    }
